<resources>
    <!-- Strings related to opening -->
    <string name="app_name">SBManager</string>
    <string name="opening_page1_header">Collaborate."</string>
    <string name="opening_page1_body">Get work done faster with SMB.</string>
    <string name="opening_page2_header">Real-time workspace."</string>
    <string name="opening_page2_body">Manage your tasks and receive real-time updates</string>
    <string name="opening_page3_header">Always with you."</string>
    <string name="opening_page3_body">Stay in syns with your team and track your projects wherever you go</string>
    <string name="signUp_button_text">Sign up</string>
    <string name="signIn_button_text">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">UserName or Email</string>
    <string name="prompt_password">Password</string>
    <string name="description">This image is for decoration</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="prompt_newAccount">No account yet? Create one</string>
    <string name="prompt_forget"><u>Forgot?</u></string>
    <string name="prompt_register">Do not have an account? Register <u>here</u></string>
    <string name="SSN">SSN</string>
    <string name="phoneNumber">phoneNumber</string>

    <!-- Strings related to register -->
    <string name="companyName">Company Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="ssn">Social Security Number</string>
    <string name="userName">User Name</string>
    <string name="dateOfBirth">Date Of Birth</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="prompt_login">Already have an account? Click <u>here</u></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="describe_the_order_here">Describe the order here</string>
    <string name="new_order">New Order</string>

    <!-- Strings related to AccountInfo -->
    <string name="title_accountInfo">Account Setting</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="edit">Edit information</string>
    <string name="save">Save changes</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_project_creat">ProjectCreatActivity</string>
    <string name="title_activity_task_create">TaskCreateActivity</string>

    <!-- Strings related to AccountInfo -->
    <string name="listWorkers">List Workers</string>
    <string name="viewProjects">View Projects</string>
    <string name="viewExpenses">View Expenses</string>
    <string name="approveExpense">Approve Expenses</string>
    <string name="viewIncome">View Income</string>
    <string name="setIncome">Set Income</string>
    <string name="addExpense">Add Expense</string>

    <string name="managers">Managers</string>
    <string name="start_date">Start Date</string>
    <string name="worker">Worker:</string>
    <string name="ProjectDescription">Description</string>
    <string name="end_date">End Date:</string>
    <string name="saveProject">Save</string>
    <string name="title">Title</string>
    <string name="Message">Title</string>

    <string name="Start">Start</string>
    <string name="Mark_as_finished">Mark as Finished</string>

</resources>
