<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:hapticFeedbackEnabled="false"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".MainActivity">

    <com.projectcourse2.group11.smallbusinessmanager.OurViewFlipper
        android:id="@+id/viewflipper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menubody_height">

        <RelativeLayout
            android:id="@+id/viewStage0"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_alignBottom="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="21dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/description"/>

            <TextView
                android:id="@+id/textView"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="300dp"
                android:text="@string/opening_page1_header"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:text="@string/opening_page1_body"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_above="@+id/textView5"
                android:layout_alignEnd="@+id/textView4"
                android:layout_marginBottom="26dp"
                android:layout_marginEnd="30dp"
                android:src="@drawable/sign_in_2"
                android:contentDescription="@string/description"/>

            <TextView
                android:id="@+id/textView4"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView5"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="250dp"
                android:text="@string/opening_page2_header"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView4"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:text="@string/opening_page2_body"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_above="@+id/textView10"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="31dp"
                android:src="@drawable/sign_in_1"
                android:contentDescription="@string/description"/>

            <TextView
                android:id="@+id/textView9"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/textView10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="250dp"
                android:text="@string/opening_page3_header"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/textView9"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:text="@string/opening_page3_body"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </RelativeLayout>


    </com.projectcourse2.group11.smallbusinessmanager.OurViewFlipper>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_signUp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:text="@string/signUp_button_text"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_signIn"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_alignStart="@+id/button_signUp"
            android:layout_below="@+id/button_signUp"
            android:layout_marginTop="16dp"
            android:background="@android:color/white"
            android:text="@string/signIn_button_text"
            android:textColor="@color/colorButton"
            android:textSize="18sp" />
    </RelativeLayout>

</LinearLayout>
