<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.projectcourse2.group11.smallbusinessmanager.ProjectCreatActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="495dp"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/appBarLayout">

        <EditText
            android:id="@+id/etTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorButton"
            android:hint="@string/title" />

        <EditText
            android:id="@+id/etTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignStart="@+id/etTaskTitle"
            android:layout_below="@+id/etTaskTitle"
            android:backgroundTint="@color/colorButton"
            android:ems="10"
            android:hint="@string/ProjectDescription"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/tvProjectStartDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/etTaskDescription"
            android:layout_below="@+id/etTaskDescription"
            android:layout_marginTop="53dp"
            android:background="@drawable/back"
            android:text="@string/start_date"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvProjectEndDate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/tvProjectStartDate"
            android:layout_alignStart="@+id/tvProjectStartDate"
            android:layout_below="@+id/tvProjectStartDate"
            android:background="@drawable/back"
            android:text="@string/end_date"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="46dp"
            android:background="@color/colorButton"
            android:text="@string/saveProject"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>
