<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#EEEEEE"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.projectcourse2.group11.smallbusinessmanager.OrderCreation"
    android:weightSum="1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarOrder"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <EditText
            android:id="@+id/orderDescription"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:backgroundTint="@color/colorButton"
            android:hint="@string/describe_the_order_here"
            android:inputType="textMultiLine"
            android:textColor="@color/colorButton" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="175dp"
            android:text="@string/worker"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/workerPicker" />

        <NumberPicker
            android:id="@+id/workerPicker"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/orderDescription" />

        <TextView
            android:id="@+id/startDateIn"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="Start Date:"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_above="@+id/buttonOK"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/buttonOK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/buttonCancel"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="11dp"
            android:background="@color/colorButton"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:background="@color/colorButton"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</LinearLayout>