<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projectcourse2.group11.smallbusinessmanager.LoginActivity">

    <!-- Login progress -->

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/description"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:id="@+id/email_login_form"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="119dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:theme="@style/TextInputLayout_style"
            app:hintTextAppearance="@style/floatLabel_style">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout"
            android:layout_marginTop="9dp"
            android:theme="@style/TextInputLayout_style"
            app:hintTextAppearance="@style/floatLabel_style"
            android:layout_alignParentEnd="true">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvForgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/prompt_forget"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/login_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout2"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/email_sign_in_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/login_error_message"
            android:background="@color/colorButton"
            android:text="@string/signIn_button_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/email_login_form"
        android:layout_alignStart="@+id/email_login_form"
        android:layout_below="@+id/email_login_form"
        android:text="Already have an account? Click here"
        android:textAlignment="center"
        android:textColor="@gandroid:color/white"
        android:textSize="16sp" />

</RelativeLayout>
